add license field to package.json for client and blogger

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "blogger",
     "version": "1.0.0",
+    "license": "MIT",
     "scripts": {
       "client-install": "cd client && npm install",
       "server-install": "cd server && npm install",
