--- a/client/package.json
+++ b/client/package.json
@@ -49,7 +49,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "install": "^0.13.0",
+    "npm": "^10.9.2",
+    "typescript": "^5.7.3",
     "web-vitals": "^4.2.4"
   }
 }
