--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,26 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "client/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "build"
-            }
-        },
-        {
-            "src": "server/index.js",
-            "use": "@vercel/node"
+      {
+        "src": "client/package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "client/build"
         }
+      },
+      {
+        "src": "server/index.js",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/server/index.js"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "/client/build/$1"
-        },
-        {
-            "src": "/",
-            "dest": "/client/build/index.html"
-        }
+      {
+        "src": "/api/v1/(.*)",
+        "dest": "server/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "client/build/$1"
+      }
     ]
-}
+  }
