mark packages as private in client, server, and root package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "blogger",
     "version": "1.0.0",
     "license": "MIT",
+    "private": "true",
     "scripts": {
       "client-install": "cd client && npm install",
       "server-install": "cd server && npm install",
