fix: correct private field value in package.json for client and server

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "blogger",
     "version": "1.0.0",
     "license": "MIT",
-    "private": "true",
+    "private": true,
     "scripts": {
       "client-install": "cd client && npm install",
       "server-install": "cd server && npm install",
@@ -17,4 +17,3 @@
       "concurrently": "^6.0.0"
     }
   }
-  
