--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "license": "MIT",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -10,6 +10,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^6.4.5",
+    "@tailwindcss/postcss": "^4.0.7",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "emailjs-com": "^3.2.0",
@@ -17,11 +19,15 @@
     "lucide-react": "^0.475.0",
     "openai": "^4.83.0",
     "quill": "^2.0.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
+    "react-animation-on-scroll": "^5.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-image-lightbox": "^5.1.4",
     "react-router-dom": "^7.0.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,14 +54,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-syntax-flow": "^7.26.0",
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@types/react": "^19.0.10",
-    "install": "^0.13.0",
-    "npm": "^10.9.2",
-    "typescript": "^5.7.3",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
     "web-vitals": "^4.2.4"
   }
 }
